fix top menu visibility for small screens

--- a/saltgui/static/stylesheets/dropdown.css
+++ b/saltgui/static/stylesheets/dropdown.css
@@ -66,6 +66,7 @@ div.button_schedules:hover .menu_item {
 
 #mainmenumini .run-command-button .menu-dropdown-content {
   max-height: none;
+  margin-top: 4px;
 }
 
 .dropdown {
