--- a/saltgui/static/stylesheets/main.css
+++ b/saltgui/static/stylesheets/main.css
@@ -139,6 +139,10 @@ h1 {
     display: block;
     float: right;
   }
+
+  #header {
+    height: 51px;
+  }
 }
 
 .route {
